<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/totalView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/rounded_frame"
    android:backgroundTint="@color/muteGreen"
    android:gravity="center_vertical"
    android:padding="26dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circular_bold"
                android:text="@string/date"
                android:textColor="@color/cream"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circular_bold"
                android:paddingStart="10dp"
                android:text="@string/wrapped"
                android:textColor="@color/cream"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <TextView
            android:id="@+id/wrappedType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular_book"
            android:paddingTop="4dp"
            android:text="@string/type"
            android:textColor="@color/brown"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/albumImg"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="fitCenter" />
</LinearLayout>
