<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/card3"
    tools:context=".ui.generate_wrap.cards.LyricGameCard">

    <!-- Header -->
    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/lyric_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular_bold"
            android:gravity="center"
            android:paddingTop="10dp"
            android:textColor="@color/navy"
            android:textSize="24sp"
            android:text="@string/guess_the_lyric"/>
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="#4AFFFFFF" />

    <!-- Top Song Section -->
    <LinearLayout
        android:id="@+id/top_song_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp">

        <!-- Top Song Title -->
        <TextView
            android:id="@+id/topSongTileLyric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_days"
            android:fontFamily="@font/circular_reg"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"/>

        <!-- Top Song Artist -->
        <TextView
            android:id="@+id/topSongArtistLyric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/circular_reg_italic"
            android:text="@string/sza"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"/>

        <!-- Album Cover -->
        <ImageView
            android:id="@+id/topSongAlbumCover"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            />

    </LinearLayout>

    <!-- Question -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/which_lyric_is_from_your_1_top_song"
        android:textSize="18sp"
        android:fontFamily="@font/circular_bold"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/deepPurple"
        android:layout_marginBottom="8dp"/>

    <!-- Choices -->
    <RadioGroup
        android:id="@+id/lyric_choices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/choice1"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular_reg"
            android:text="@string/choice"/>

        <RadioButton
            android:id="@+id/choice2"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular_reg"
            android:text="@string/choice"/>

        <RadioButton
            android:id="@+id/choice3"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular_reg"
            android:text="@string/choice"/>

        <RadioButton
            android:id="@+id/choice4"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular_reg"
            android:text="@string/choice"/>

    </RadioGroup>

    <!-- Overlay for Answer -->
    <TextView
        android:id="@+id/correctAnswerLyrics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/circular_reg"
        android:gravity="center"
        android:text=""
        android:textColor="@android:color/holo_green_dark"
        android:textSize="12sp"/>

    <!-- Button for User to Submit Guess -->
    <Button
        android:id="@+id/submitGuessButtonLyric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_guess"
        android:fontFamily="@font/circular_reg"
        android:textSize="18sp"
        android:backgroundTint="@color/navy"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
