<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card1"
    tools:context=".ui.generate_wrap.cards.HangoutLLMCard">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_margin="8dp" >

        <TextView
            android:id="@+id/hangoutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular_bold"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            android:text="@string/hangoutTitle"
            android:textColor="@color/navy"
            android:textSize="24sp" />


        <!-- Trait 1,2,3 -->
        <TextView
            android:id="@+id/hangoutTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular_reg_italic"
            android:gravity="center_horizontal"
            android:paddingLeft="8dp"
            android:paddingTop="20dp"
            android:paddingRight="8dp"
            android:paddingBottom="10dp"
            android:text="@string/hangoutTitle2"
            android:textColor="@color/deepPurple"
            android:textSize="22sp" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <!-- Trait 1 and 2 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="50dp">
                  
                    <!-- Trait 1 -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/friendTrait1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/circular_bold"
                            android:gravity="center"
                            android:text="@string/trait1"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <!-- Trait 2 -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/friendTrait2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/circular_bold"
                            android:gravity="center"
                            android:text="@string/trait2"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="40dp">

                    <TextView
                        android:id="@+id/friendTrait3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/circular_bold"
                        android:gravity="center"
                        android:text="@string/trait3"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

</LinearLayout>