<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkerCream"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_gravity="center" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/muteGreen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/createUsernameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/createUsernameText"
                android:fontFamily="@font/circular_med"
                android:textColor="@color/cream"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/darkerCream"
                android:background="@drawable/custom_edittext"
                android:hint="   Username"
                android:fontFamily="@font/circular_reg"
                android:padding="8dp"
                android:textColor="@color/brown"
                android:layout_marginTop="25dp" />

            <Button
                android:id="@+id/createUsernameButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/darkerCream"
                android:text="@string/createUsernameButton"
                android:fontFamily="@font/circular_reg"
                android:textColor="@color/brown"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                app:cornerRadius="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/createUsernameBottomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:fontFamily="@font/circular_reg"
        android:text="@string/createUsernameBottomText"
        android:textColor="@color/mutedPinkBrown"/>

</LinearLayout>